Mon Jun 21 14:28:44 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/ast/ast_interface.cpp:
        
          Added member and accessor functions to store and retrieve
          the associated AMI reply handler, if any.
          
        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
        
          Used the storage described above to fetch the reply
          handler to add as a parameter in the assoiated sendc_*
          operation.
          
        * TAO_IDL/fe/fe_interface_header.cpp:
        
          Changed a boolean lookup_by_name() arg from 'true' to
          'false', overlooked when default parameters were removed
          from this operation. Thanks to Simon Massey
          <simon dot massey at prismtech dot com> for pointing
          out the oversight.

Mon Jun 21 08:12:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/Quoter/RTCORBA/Broker.cpp:
        * docs/tutorials/Quoter/RTCORBA/Broker_i.cpp:
          Fixed compile error

Fri Jun 18 20:13:30 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_attribute/attribute.cpp:

          Fixed bug in initialization of scoped name for operations
          created on the fly for attributes.

        * TAO_IDL/ast/ast_decl.cpp:

          Cosmetic changes.

Fri Jun 18 18:28:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          No need to generate an include of DDS4CCM_Traits.h anymore

Fri Jun 18 18:07:50 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/util/utl_global.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/be_include/be_codegen.h:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_connector.cpp:

          Added new pragma to specify the file to include
          containing the DDS connector impl template class.